--- a/SDLProject/SDLProject.vcxproj
+++ b/SDLProject/SDLProject.vcxproj
@@ -151,7 +151,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\Sam Minton\Desktop\SDLProject\SDLProject\SDLProject\definitions.h" />
+    <ClInclude Include="definitions.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
